--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -26,8 +26,8 @@ DB_CONNECTION=pgsql
 DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=sydnex_prod      # Отдельная БД для прода
-DB_USERNAME=sydnex_prod_user # Не используйте 'laravel'
-DB_PASSWORD=strong_password_here! # Сложный пароль
+DB_USERNAME=admin # Не используйте 'laravel'
+DB_PASSWORD=KeydBEV*55*u! # Сложный пароль
 
 # ====================
 # Сессии и кеш
