--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,8 @@
     "paths": {
       "*": ["./src/resources/*"],
       "@/*": ["./src/*"],
+      "Advert/*": ["./src/Advert/*"],
+      "SydnoComponents/*": ["./src/SydnoComponents/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
