--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -3,6 +3,7 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 COPY package.json package-lock.json ./
+RUN npm install
 RUN npm ci --omit=dev
 COPY . .
 RUN npm run build && \
