--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,15 +1,21 @@
 # Stage 1: Build stage
 FROM php:8.3-fpm-alpine AS builder
 
-RUN apk add --no-cache \
-    postgresql-dev \
+RUN apt-get update && apt-get install -y \
+    build-essential \
     libpng-dev \
-    libjpeg-turbo-dev \
-    freetype-dev \
-    libzip-dev \
-    icu-dev \
+    libjpeg62-turbo-dev \
+    libfreetype6-dev \
+    locales \
+    zip \
+    jpegoptim optipng pngquant gifsicle \
+    vim \
+    unzip \
     git \
-    unzip
+    curl \
+    libpq-dev \
+    libzip-dev \
+    libicu-dev
 
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 RUN docker-php-ext-install -j$(nproc) \
