--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,21 +1,15 @@
 # Stage 1: Build stage
 FROM php:8.3-fpm-alpine AS builder
 
-RUN apt-get update && apt-get install -y \
-    build-essential \
+RUN apk add --no-cache \
+    postgresql-dev \
     libpng-dev \
-    libjpeg62-turbo-dev \
-    libfreetype6-dev \
-    locales \
-    zip \
-    jpegoptim optipng pngquant gifsicle \
-    vim \
-    unzip \
-    git \
-    curl \
-    libpq-dev \
+    libjpeg-turbo-dev \
+    freetype-dev \
     libzip-dev \
-    libicu-dev
+    icu-dev \
+    git \
+    unzip
 
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 RUN docker-php-ext-install -j$(nproc) \
