--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -8,7 +8,7 @@ RUN apk add --no-cache \
     freetype-dev \
     libzip-dev \
     icu-dev \
-    zlib-dev \ 
+    zlib-dev \
     git \
     unzip
 
@@ -39,7 +39,8 @@ RUN apk add --no-cache \
     libjpeg-turbo \
     freetype \
     libzip \
-    icu
+    icu \
+    zlib
 
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 RUN docker-php-ext-install -j$(nproc) \
