--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,6 +1,7 @@
 # Stage 1: Build stage
 FROM php:8.3-fpm-alpine AS builder
 
+# Установка всех необходимых зависимостей
 RUN apk add --no-cache \
     postgresql-dev \
     libpng-dev \
@@ -11,9 +12,18 @@ RUN apk add --no-cache \
     zlib-dev \
     libwebp-dev \
     git \
-    unzip
+    unzip \
+    pkgconfig # Добавляем явно pkgconfig
 
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg
+# Явно указываем пути к библиотекам для pkg-config
+ENV PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/share/pkgconfig
+
+# Конфигурация GD с явным указанием путей
+RUN docker-php-ext-configure gd \
+    --with-freetype=/usr/include/ \
+    --with-jpeg=/usr/include/ \
+    --with-webp=/usr/include/
+
 RUN docker-php-ext-install -j$(nproc) \
     pdo \
     pdo_pgsql \
@@ -28,7 +38,6 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 COPY --chown=www-data:www-data . /var/www
 WORKDIR /var/www
 
-# Install dependencies without dev packages
 RUN composer install --no-dev --optimize-autoloader --no-interaction --no-progress --no-scripts
 
 # Stage 2: Production image
@@ -44,24 +53,17 @@ RUN apk add --no-cache \
     zlib \
     libwebp
 
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg
-RUN docker-php-ext-install -j$(nproc) \
-    pdo \
-    pdo_pgsql \
-    gd \
-    zip \
-    intl \
-    opcache \
-    pcntl
+# Копируем скомпилированные расширения из builder
+COPY --from=builder /usr/local/lib/php/extensions/no-debug-non-zts-20230831/* /usr/local/lib/php/extensions/no-debug-non-zts-20230831/
 
-# Copy PHP configuration
+# Копируем PHP конфигурацию
 COPY docker/php/php.ini /usr/local/etc/php/conf.d/php.ini
 COPY docker/php/php-fpm.conf /usr/local/etc/php-fpm.d/www.conf
 
-# Copy from builder
+# Копируем приложение
 COPY --from=builder --chown=www-data:www-data /var/www /var/www
 
-# Create cache directories
+# Настраиваем права
 RUN mkdir -p /var/www/storage/framework/{cache,sessions,views} && \
     mkdir -p /var/www/bootstrap/cache && \
     chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
@@ -69,7 +71,6 @@ RUN mkdir -p /var/www/storage/framework/{cache,sessions,views} && \
 USER www-data
 WORKDIR /var/www
 
-# Optimize Laravel
 RUN php artisan config:cache && \
     php artisan route:cache && \
     php artisan view:cache
