--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -41,7 +41,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 COPY --chown=www-data:www-data . /var/www
 WORKDIR /var/www
 
-RUN composer install --no-dev --optimize-autoloader --no-interaction --no-progress --no-scripts
+RUN composer install --optimize-autoloader --no-interaction --no-progress --no-scripts
 
 # Stage 2: Production image
 FROM php:8.3-fpm-alpine
