--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,15 +1,18 @@
 server {
-    listen 443 ssl;
-    server_name sydnex.ru;
-
-    ssl_certificate /etc/letsencrypt/live/sydnex.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/sydnex.ru/privkey.pem;
-
+    listen 80;
+    server_name _;  # Специальное значение для обработки всех доменов/IP
+    
     location / {
         proxy_pass http://frontend:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /api {
         proxy_pass http://backend:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
