--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -70,7 +70,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile  # Продакшен сборка
+      dockerfile: Dockerfile.prod
     container_name: next_app_prod
     ports:
       - "3000:3000"
