--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,15 +13,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "paths": {
+      "*": ["./src/resources/*"],
       "@/*": ["./src/*"],
-      "Advert/*": ["./src/resources/Advert/*"],
-      "SydnoComponents/*": ["./src/resources/SydnoComponents/*"]
-    },
-    "plugins": [{
-      "name": "next"
-    }]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
