--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,20 +1,21 @@
-# Stage 1: Build
+# Stage 1: Build (Builder)
 FROM node:18-alpine AS builder
 
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
-RUN npm ci --omit=dev
+COPY package*.json ./
+RUN npm ci
 COPY . .
-RUN npm run build && \
-    rm -rf node_modules
+RUN npm run build
 
-# Stage 2: Production
+# Stage 2: Production (Nginx)
 FROM nginx:alpine
 
-# Копируем статику
-COPY --from=builder /app/out /usr/share/nginx/html
-COPY docker/nginx/nginx-spa.conf /etc/nginx/conf.d/default.conf
+# Копируем статику из билда Next.js
+COPY --from=builder /app/.next/static /usr/share/nginx/html/_next/static
+COPY --from=builder /app/public /usr/share/nginx/html/
+
+# Копируем кастомный nginx.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
