--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -74,6 +74,8 @@ services:
     container_name: next_app_prod
     ports:
       - "3000:3000"
+    expose:
+      - "3000"
     restart: always
     working_dir: /app
     volumes:
