--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,18 +1,18 @@
-# Stage 1: Build (Builder)
+# Stage 1: Build
 FROM node:18-alpine AS builder
-
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
 RUN npm run build
 
-# Stage 2: Production (Nginx)
-FROM nginx:alpine
+# Stage 2: Run (Node.js для Next.js)
+FROM node:18-alpine
+WORKDIR /app
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/public ./public
 
-# Копируем статику из билда Next.js
-COPY --from=builder /app/.next/static /usr/share/nginx/html/_next/static
-COPY --from=builder /app/public /usr/share/nginx/html/
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+CMD ["npm", "start"]
