--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -2,15 +2,18 @@ server {
     listen 80;
     
     location / {
-        proxy_pass http://frontend:3000;  # Указываем порт Next.js
+        proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+        proxy_cache_bypass $http_upgrade;
     }
 
     location /api {
         proxy_pass http://backend:9000;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
