--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BACKEND=http://localhost:8000
+NEXT_PUBLIC_API_URL=/api  # Для проксирования через Nginx
 API_BACKEND_SERVER=http://webserver
