--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,19 +1,35 @@
+upstream backend {
+    server backend:9000;
+}
+
+upstream frontend {
+    server frontend:3000;
+}
+
 server {
     listen 80;
     
     location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
+        proxy_pass http://frontend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
 
     location /api {
-        proxy_pass http://backend:9000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        try_files $uri $uri/ /index.php?$query_string;
+        fastcgi_pass backend;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME /var/www/public/index.php;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass backend;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
