--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -6,8 +6,10 @@ APP_ENV=production
 APP_KEY=base64:JSsjbgkG+KrGC0Ar5z1mIVii/VxaBA82QestliJT6Os=  # Обязательно смените на новый в продакшене!
 APP_DEBUG=false
 APP_TIMEZONE=Europe/Moscow  # Рекомендую указать ваш часовой пояс
-APP_URL=https://sydnex.ru    # HTTPS!
-FRONTEND_URL=https://sydnex.ru
+APP_URL=http://backend:9000
+SANCTUM_STATEFUL_DOMAINS=frontend
+SESSION_DOMAIN=http://83.222.18.198
+FRONTEND_URL=http://83.222.18.198
 
 # ====================
 # Локализация
