--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,35 +1,24 @@
-upstream backend {
-    server backend:9000;
-}
-
-upstream frontend {
-    server frontend:3000;
-}
-
 server {
     listen 80;
-    
+
     location / {
-        proxy_pass http://frontend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
     }
 
     location /api {
         try_files $uri $uri/ /index.php?$query_string;
-        fastcgi_pass backend;
-        fastcgi_index index.php;
-        include fastcgi_params;
+        
+        fastcgi_pass backend:9000;
         fastcgi_param SCRIPT_FILENAME /var/www/public/index.php;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        
+        include fastcgi_params;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
     }
 
     location ~ \.php$ {
-        fastcgi_pass backend;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        return 404; # Блокируем прямой доступ к .php файлам
     }
 }
