--- a/backend/docker/php/php-fpm.conf
+++ b/backend/docker/php/php-fpm.conf
@@ -1,7 +1,9 @@
 [www]
 user = www-data
 group = www-data
-listen = 9000
+listen = 0.0.0.0:9000
+listen.owner = www-data
+listen.group = www-data
 pm = dynamic
 pm.max_children = 25
 pm.start_servers = 5
