--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -3,22 +3,15 @@ server {
 
     location / {
         proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
     }
 
     location /api {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /index.php$is_args$args;
         
         fastcgi_pass backend:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /var/www/public/index.php;
         fastcgi_param PATH_INFO $fastcgi_path_info;
-        
-        include fastcgi_params;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-    }
-
-    location ~ \.php$ {
-        return 404; # Блокируем прямой доступ к .php файлам
     }
 }
