--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,17 +1,34 @@
 server {
     listen 80;
+    server_name 83.222.18.198;
 
+    # Frontend (Next.js)
     location / {
         proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_cache_bypass $http_upgrade;
     }
 
+    # Backend API (Laravel)
     location /api {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$query_string;
         
         fastcgi_pass backend:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /var/www/public/index.php;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        
+        # Важно для правильных заголовков
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Обработка PHP файлов
+    location ~ \.php$ {
+        return 404; # Блокируем прямой доступ
     }
 }
