--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,34 +1,48 @@
+upstream php-fpm {
+    server backend:9000;
+}
+
 server {
     listen 80;
     server_name 83.222.18.198;
 
-    # Frontend (Next.js)
+    root /var/www/public;
+    index index.php;
+
+    # Frontend Next.js
     location / {
         proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Backend API (Laravel)
+    # Backend API
     location /api {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /index.php$is_args$args;
         
-        fastcgi_pass backend:9000;
+        fastcgi_pass php-fpm;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/www/public/index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         
-        # Важно для правильных заголовков
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Обработка PHP файлов
+    # PHP-FPM health check
+    location /ping {
+        access_log off;
+        fastcgi_pass php-fpm;
+        fastcgi_param SCRIPT_FILENAME $document_root/ping.php;
+        include fastcgi_params;
+    }
+
+    # Security: Block direct access to .php files
     location ~ \.php$ {
-        return 404; # Блокируем прямой доступ
+        return 404;
     }
 }
