--- a/backend/docker/php/php-fpm.conf
+++ b/backend/docker/php/php-fpm.conf
@@ -1,7 +1,7 @@
 [www]
 user = www-data
 group = www-data
-listen = 0.0.0.0:9000
+listen = 9000
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
@@ -9,3 +9,9 @@ pm.max_children = 25
 pm.start_servers = 5
 pm.min_spare_servers = 3
 pm.max_spare_servers = 10
+pm.max_requests = 500
+slowlog = /var/log/php-fpm/slow.log
+request_slowlog_timeout = 5s
+php_admin_value[error_log] = /var/log/php-fpm/error.log
+php_admin_flag[log_errors] = on
+php_admin_value[memory_limit] = 256M
