--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,8 +9,9 @@ services:
     restart: always  # Всегда перезапускать при падении
     working_dir: /var/www
     volumes:
-      - laravel_storage:/var/www/storage  # Только storage, код в образе
-      - laravel_bootstrap_cache:/var/www/bootstrap/cache
+      - ./backend:/var/www
+      - ./docker/php/php-fpm.conf:/usr/local/etc/php-fpm.d/www.conf
+      - php-sockets:/var/run/php-fpm
     env_file:
       - .env.prod  # Отдельный файл для прода
     environment:
@@ -58,6 +59,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.prod.conf:/etc/nginx/conf.d/default.conf
+      - php-sockets:/var/run/php-fpm
     depends_on:
       - frontend
       - backend
@@ -87,6 +89,7 @@ volumes:
     driver: local
   next_cache:
     driver: local
+  php-sockets:
 
 networks:
   app_network:
