--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,6 +29,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    expose: 9000
 
   db:
     image: postgres:15-alpine  # Более легковесный образ
