--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
       - ./backend/docker/php/php-fpm.conf:/usr/local/etc/php-fpm.d/www.conf
       - php-sockets:/var/run/php-fpm
     env_file:
-      - .env.prod  # Отдельный файл для прода
+      - ./backend/.env.prod  # Отдельный файл для прода
     environment:
       - APP_ENV=production
       - APP_DEBUG=false
