--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -17,8 +17,14 @@ WORKDIR /var/www
 
 COPY --chown=www-data:www-data . .
 
+# Копируем production .env файл
+COPY backend/.env.prod .env
+
 RUN composer install --no-dev --optimize-autoloader \
-    && php artisan optimize:clear
+    && php artisan optimize:clear \
+    && php artisan config:cache \
+    && php artisan route:cache \
+    && php artisan view:cache
 
 USER www-data
 
