--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,17 +5,26 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile.prod
-    ports:
-      - "9000:9000"
     volumes:
       - ./backend:/var/www
-      # Монтируем отдельно .env.prod чтобы можно было обновлять без пересборки
       - ./backend/.env.prod:/var/www/.env
     environment:
       - APP_ENV=production
-      - APP_DEBUG=false
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.prod.conf:/etc/nginx/conf.d/default.conf
+      - ./backend/public:/var/www/public
     depends_on:
-      - db
+      - backend
+    networks:
+      - app-network
 
   db:
     image: postgres:15-alpine
@@ -25,8 +34,12 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
