--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,23 +1,25 @@
 server {
     listen 80;
-    server_name 83.222.18.198;  # или ваш домен
+    server_name 83.222.18.198
+
+    root /var/www/public;
+    index index.php;
 
     location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location /api {
-        proxy_pass http://backend;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location ~ \.php$ {
+        fastcgi_pass backend:9000; # совпадает с именем сервиса в docker-compose
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params;
     }
 
-    location /storage {
-        alias /var/www/storage/app/public;
-        try_files $uri $uri/ =404;
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
