--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,6 +28,8 @@ services:
 
   db:
     image: postgres:15-alpine
+    env_file:
+      - .env.prod  
     environment:
       - POSTGRES_DB=${DB_DATABASE}
       - POSTGRES_USER=${DB_USERNAME}
