--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -29,7 +29,7 @@ DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=sydnex_prod      # Отдельная БД для прода
 DB_USERNAME=admin # Не используйте 'laravel'
-DB_PASSWORD=KeydBEV*55*u! # Сложный пароль
+DB_PASSWORD=KeydBEV*55*u # Сложный пароль
 
 # ====================
 # Сессии и кеш
