--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 83.222.18.198
+    server_name 83.222.18.198;
 
     root /var/www/public;
     index index.php;
@@ -10,13 +10,13 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass backend:9000; # совпадает с именем сервиса в docker-compose
+        fastcgi_pass backend:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
     }
 
-    location ~ /\.(?!well-known).* {
+    location ~ /\.ht {
         deny all;
     }
 
