--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name backend.localhost;
+    server_name 83.222.18.198;
     root /var/www/public;
     index index.php index.html;
 
