--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,26 +1,51 @@
-FROM php:8.3-fpm-alpine
+FROM php:8.3-fpm
 
-RUN apk add --no-cache \
-    postgresql-dev \
+RUN apt-get update && apt-get install -y \
+    build-essential \
     libpng-dev \
-    libjpeg-turbo-dev \
-    freetype-dev \
+    libjpeg62-turbo-dev \
+    libfreetype6-dev \
+    locales \
+    zip \
+    jpegoptim optipng pngquant gifsicle \
+    vim \
+    unzip \
+    git \
+    curl \
+    libpq-dev \
     libzip-dev \
-    icu-dev
+    libicu-dev
 
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+RUN docker-php-ext-install pdo pdo_pgsql zip exif pcntl
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
-RUN docker-php-ext-install pdo pdo_pgsql gd zip intl opcache
+RUN docker-php-ext-install gd
+RUN docker-php-ext-install intl && \
+    docker-php-ext-enable intl
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+RUN groupadd -g 1000 www
+RUN useradd -u 1000 -ms /bin/bash -g www www
+
+RUN pecl install xdebug-3.3.0
+RUN docker-php-ext-enable xdebug
+RUN echo "xdebug.mode=debug" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.client_host=host.docker.internal" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
+COPY . /var/www
+
+COPY --chown=www:www . /var/www
+
+RUN mkdir -p /var/www/storage/logs /var/www/storage/framework/{cache,sessions,testing,views}
+RUN chown -R www:www /var/www/storage
+RUN chmod -R 775 /var/www/storage
+
+USER www
+
 WORKDIR /var/www
-
-COPY --chown=www-data:www-data . .
-
-# Копируем production .env файл
-COPY backend/.env.prod .env
-
-USER www-data
 
 EXPOSE 9000
 CMD ["php-fpm"]
