--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,18 +1,12 @@
-# Stage 1: Build
-FROM node:18-alpine AS builder
-WORKDIR /app
-COPY package*.json ./
-RUN npm ci
-COPY . .
-RUN npm run build
-
-# Stage 2: Run (Node.js для Next.js)
 FROM node:18-alpine
+
 WORKDIR /app
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/public ./public
+
+COPY package.json package-lock.json ./
+RUN npm install
+
+COPY . .
 
 EXPOSE 3000
-CMD ["npm", "start"]
+
+CMD ["npm", "run", "dev"]
