--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -1,104 +1,65 @@
-# ====================
-# Основные настройки
-# ====================
-APP_NAME=sydnex.ru
-APP_ENV=production
-APP_KEY=base64:JSsjbgkG+KrGC0Ar5z1mIVii/VxaBA82QestliJT6Os=  # Обязательно смените на новый в продакшене!
-APP_DEBUG=false
-APP_TIMEZONE=Europe/Moscow  # Рекомендую указать ваш часовой пояс
-APP_URL=http://backend
-SESSION_DOMAIN=.83.222.18.198  # или ваш IP, если нет домена
-SANCTUM_STATEFUL_DOMAINS=frontend,localhost  # добавить фронтенд
-FRONTEND_URL=http://frontend:3000
+APP_NAME=sydno.ru
+APP_ENV=local
+APP_KEY=base64:JSsjbgkG+KrGC0Ar5z1mIVii/VxaBA82QestliJT6Os=
+APP_DEBUG=true
+APP_TIMEZONE=UTC
+APP_URL=http://83.222.18.198
+FRONTEND_URL=http://83.222.18.198:3000
 
-# ====================
-# Локализация
-# ====================
-APP_LOCALE=ru                # Для русского интерфейса
+APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=ru_RU      # Для русских тестовых данных
+APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
 
-# ====================
-# База данных
-# ====================
+BCRYPT_ROUNDS=12
+
+LOG_CHANNEL=stack
+LOG_STACK=single
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
 DB_CONNECTION=pgsql
 DB_HOST=db
 DB_PORT=5432
-DB_DATABASE=sydnex_prod      # Отдельная БД для прода
-DB_USERNAME=admin # Не используйте 'laravel'
-DB_PASSWORD=KeydBEV*55*u # Сложный пароль
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=secret
 
-# ====================
-# Сессии и кеш
-# ====================
-# SESSION_DRIVER=redis         # Для лучшей производительности
-# SESSION_LIFETIME=120
-# SESSION_ENCRYPT=true         # Вкл шифрование в продакшене
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
+BROADCAST_CONNECTION=log
+FILESYSTEM_DISK=public
+QUEUE_CONNECTION=database
+
 CACHE_STORE=database
-# CACHE_STORE=redis
-# QUEUE_CONNECTION=redis       # Для фоновых задач
+CACHE_PREFIX=
 
-# ====================
-# Redis
-# ====================
-# REDIS_CLIENT=phpredis
-# REDIS_HOST=redis             # Отдельный сервис Redis
-# REDIS_PASSWORD=redis_strong_password
-# REDIS_PORT=6379
+MEMCACHED_HOST=127.0.0.1
 
-# ====================
-# Почта
-# ====================
+REDIS_CLIENT=phpredis
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
 MAIL_MAILER=smtp
-MAIL_HOST=real_smtp.example.com  # Реальный SMTP (Mailgun, SendGrid и т.д.)
-MAIL_PORT=587
-MAIL_USERNAME=your_smtp_login
-MAIL_PASSWORD=your_smtp_password
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=support@sydnex.ru
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="support@sydno.ru"
 MAIL_FROM_NAME="${APP_NAME}"
-MAIL_TO_ADDRESS=admin@sydnex.ru  # Для ошибок и уведомлений
 
-# ====================
-# Файлы и хранилища
-# ====================
-# FILESYSTEM_DISK=s3           # Рекомендуется для прода
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# AWS_ACCESS_KEY_ID=AKIA...    # Только если используете S3
-# AWS_SECRET_ACCESS_KEY=secret # Храните в секретах!
-# AWS_DEFAULT_REGION=ru-1      # Например, для Selectel
-# AWS_BUCKET=sydnex-prod
-# AWS_URL=https://s3.sydnex.ru
-# AWS_ENDPOINT=https://s3.sydnex.ru
-
-# ====================
-# Безопасность
-# ====================
-SANCTUM_STATEFUL_DOMAINS=.sydnex.ru
-SESSION_DOMAIN=.sydnex.ru
-SESSION_SECURE_COOKIE=true
-SESSION_HTTP_ONLY=true
-SESSION_SAME_SITE=lax
-
-# ====================
-# Телеграм (если нужно)
-# ====================
-TELEGRAM_BOT_TOKEN=7345380236:AAGFQEE5THmIIiXx77LRu3eESalzNYxbcIs  # Сменить в продакшене!
-TELEGRAM_CHANNEL_ID=1402350810
-# TELEGRAM_ADMIN_ID=your_personal_id  # Для уведомлений админу
-
-# ====================
-# Оптимизации
-# ====================
-OPCACHE_ENABLE=1
-OPCACHE_MEMORY_CONSUMPTION=128
-OPCACHE_MAX_ACCELERATED_FILES=10000
+VITE_APP_NAME="${APP_NAME}"
