--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -66,7 +66,7 @@ services:
       - ./frontend:/app
       - /app/node_modules
     env_file:
-      - .env.production  # Для доступа к NEXT_PUBLIC_API_URL
+      - ./frontend/.env.production  # Для доступа к NEXT_PUBLIC_API_URL
     ports:
       - "3000:3000"
     networks:
