--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -1,14 +1,16 @@
 APP_NAME=sydno.ru
-APP_ENV=local
+APP_ENV=production
+APP_DEBUG=false
 APP_KEY=base64:JSsjbgkG+KrGC0Ar5z1mIVii/VxaBA82QestliJT6Os=
-APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://83.222.18.198
+APP_URL=http://83.222.18.198:8000
 FRONTEND_URL=http://83.222.18.198:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
+
+XDEBUG_MODE=off
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
