--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -33,12 +33,23 @@ RUN addgroup -g 1000 www && \
 
 WORKDIR /var/www
 
+# Копируем только необходимые файлы
+# COPY --chown=www:www composer.* ./
+# RUN composer install --no-dev --optimize-autoloader --no-interaction
+
+# COPY --chown=www:www . .
+
+# # Настройка прав
+# RUN mkdir -p storage/framework/{cache,sessions,views} storage/logs
+# RUN chown -R www:www storage bootstrap/cache
+# RUN chmod -R 775 storage bootstrap/cache
+
 USER www
 
-# Оптимизация Laravel
-RUN php artisan config:cache && \
-    php artisan route:cache && \
-    php artisan view:cache
+# # Оптимизация Laravel
+# RUN php artisan config:cache && \
+#     php artisan route:cache && \
+#     php artisan view:cache
 
 EXPOSE 9000
 CMD ["php-fpm"]
