--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -1,6 +1,6 @@
 APP_NAME=sydno.ru
 APP_ENV=production
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=base64:JSsjbgkG+KrGC0Ar5z1mIVii/VxaBA82QestliJT6Os=
 APP_TIMEZONE=UTC
 APP_URL=http://83.222.18.198:8000
