--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
     working_dir: /var/www
     volumes:
       - ./backend:/var/www
-      - /var/www/vendor  # Избегаем перезаписи vendor в контейнере
+      - ./backend:/var/www:cached
     env_file:
       - ./backend/.env.prod
     environment:
