--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,7 +10,8 @@
         "flowframe/laravel-trend": "^0.4.0",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "fakerphp/faker": "^1.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
