--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -37,8 +37,12 @@ WORKDIR /var/www
 # Копируем только composer файлы сначала
 COPY --chown=www:www composer.json composer.lock ./
 
-# Установка зависимостей
-RUN composer install --no-dev --optimize-autoloader --no-interaction
+# Замените проблемный участок на:
+RUN if [ -f composer.lock ]; then \
+      composer install --no-dev --optimize-autoloader --no-interaction; \
+    else \
+      composer install --no-dev --optimize-autoloader --no-interaction --prefer-dist; \
+    fi
 
 # Копируем остальные файлы
 COPY --chown=www:www . .
