--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,13 +1,22 @@
-FROM node:18-alpine
+FROM node:18-alpine as builder
 
 WORKDIR /app
-
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm ci --omit=dev
 
 COPY . .
 RUN npm run build
 
-EXPOSE 3000
+FROM node:18-alpine
 
+WORKDIR /app
+ENV NODE_ENV=production
+
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/package-lock.json ./package-lock.json
+COPY --from=builder /app/node_modules ./node_modules
+
+EXPOSE 3000
 CMD ["npm", "start"]
