--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,22 +1,18 @@
-FROM node:18-alpine as builder
-
+# Stage 1: Build
+FROM node:18-alpine AS builder
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci --omit=dev
-
+COPY package*.json ./
+RUN npm ci
 COPY . .
 RUN npm run build
 
+# Stage 2: Run (Node.js для Next.js)
 FROM node:18-alpine
-
 WORKDIR /app
-ENV NODE_ENV=production
-
 COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/package-lock.json ./package-lock.json
 COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/public ./public
 
 EXPOSE 3000
 CMD ["npm", "start"]
