--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -22,6 +22,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+CORS_ALLOWED_ORIGINS=http://83.222.18.198,http://83.222.18.198:3000
+
 DB_CONNECTION=pgsql
 DB_HOST=db
 DB_PORT=5432
